# azure-architectures-chat-app

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
az_architectures_chat_app/: chat.py  configs.py  main.py  search.py  template.py  utils.py
az_architectures_chat_app/prompts/: rag.jinja2  search_query.jinja2
