[tool.poetry]
name = "az-architectures-chat-app"
version = "0.1.0"
description = "Azure architectures chat app"
authors = ["Anurag Chatterjee <anuragchatterjee92@gmail.com>"]
readme = "README.md"
packages = [{include = "az_architectures_chat_app"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
openai = "1.8.0"
streamlit = "1.30.0"
tiktoken = "0.5.2"
sentence-transformers = "2.2.2"
langchain = "0.1.6"
chromadb = "0.4.22"


[tool.poetry.group.dev.dependencies]
black = "23.3.0"
ruff = "0.0.269"

[tool.black]
target-version = ["py39"]
line-length = 100
include = '\.pyi?$'
exclude = '''
    \.git |
    \.__pycache__|
    \.hg|
    \.mypy_cache|
    \.tox|
    \.venv|
    _build|
    buck-out|
    build|
    dist
    '''

[tool.ruff]
line-length = 100
exclude = [".git", "__pycache__", ".mypy_cache", ".pytest_cache"]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "B904",
    "B006",
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "E402",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
